--- a/index.Rmd
+++ b/index.Rmd
@@ -9,9 +9,9 @@ knitr::include_graphics("media/ski.jpg")
 ```
 
 
-You have reached my personal webpage. If you're looking to learn about what I'm doing, you're in the right place! Otherwise, you can visit [this](http://existentialcomics.com/) website, mainly because it's funny.
+You have reached my personal webpage. If you're looking to learn about what I'm doing, you're in the right place!
 
-I'm currently a PhD student in the [Memory & Cognition Lab'](http://recherche.parisdescartes.fr/LaboratoireMemoireCognition) at the University of Sorbonne Paris Cit???.
+I'm currently a PhD student in the [Memory & Cognition Lab'](http://recherche.parisdescartes.fr/LaboratoireMemoireCognition) at the University of Sorbonne Paris Cité.
 
 
 *PS: I made this website using R.*
