--- a/research.Rmd
+++ b/research.Rmd
@@ -35,9 +35,10 @@ More generally, my scientific interests also include the following topics:
 
 Sperduti, M., Armougum, A., **Makowski, D.** & Piolino, P. (*under review*). *Interaction between attentional systems and episodic memory encoding: the impact of conflict on binding of information*, Experimental Brain Research.
 
-Nicolas, S., & **Makowski, D**. (2017). [*Centenaire Ribot (I). La réception de l'oeuvre de Théodule Ribot chez l'éditeur Ladrange (1870-1873)*](https://dominiquemakowski.github.io/papers/nicolas2017a.pdf). Bulletin de Psychologie, 70 (3), n°549, 163-178.
+**Makowski, D.**\*, Sperduti, M.\*, Nicolas, S. & Piolino, P. (*2017*). ["Being there" *and remembering it: Presence improves Memory Encoding*](https://dominiquemakowski.github.io/papers/makowski2017.pdf). Consciousness & Cognition, 53, 194–202.
 
-**Makowski, D.**\*, Sperduti, M.\*, Nicolas, S. & Piolino, P. (*under review*). "Being there" *and remembering it: Presence improves Memory Encoding*. Consciousness & Cognition.
+Nicolas, S., & **Makowski, D**. (2017). [*Centenaire Ribot (I). La réception de l'oeuvre de Théodule Ribot chez l'éditeur Ladrange (1870-1873)*](https://dominiquemakowski.github.io/papers/nicolas2017a.pdf). Bulletin de Psychologie, 70 (3), 163-178.
+
 
 Sperduti, M., **Makowski, D.** & Piolino, P. (2017). [*Méditer pour bien vieillir ? Les possibles bienfaits des pratiques méditatives sur le déclin cognitif lié à l’âge | Meditation and successful aging: can meditative practices counteract age-related cognitive decline?*](https://dominiquemakowski.github.io/papers/sperduti2017b.pdf), Gériatrie et Psychologie Neuropsychiatrie du Vieillissement, 15 (2),  205-13.
 
