--- a/research.Rmd
+++ b/research.Rmd
@@ -40,7 +40,7 @@ Sperduti, M., Armougum, A., **Makowski, D.** & Piolino, P. (*under review*). *In
 Nicolas, S., & **Makowski, D**. (2017). [*Centenaire Ribot (I). La réception de l'oeuvre de Théodule Ribot chez l'éditeur Ladrange (1870-1873)*](https://dominiquemakowski.github.io/papers/nicolas2017a.pdf). Bulletin de Psychologie, 70 (3), 163-178.
 
 
-Sperduti, M., **Makowski, D.** & Piolino, P. (2017). [*Méditer pour bien vieillir ? Les possibles bienfaits des pratiques méditatives sur le déclin cognitif lié à l’âge | Meditation and successful aging: can meditative practices counteract age-related cognitive decline?*](https://dominiquemakowski.github.io/papers/sperduti2017b.pdf), Gériatrie et Psychologie Neuropsychiatrie du Vieillissement, 15 (2),  205-13.
+Sperduti, M., **Makowski, D.**, Blondé, P. & Piolino, P. (2017). [*Méditer pour bien vieillir ? Les possibles bienfaits des pratiques méditatives sur le déclin cognitif lié à l’âge | Meditation and successful aging: can meditative practices counteract age-related cognitive decline?*](https://dominiquemakowski.github.io/papers/sperduti2017b.pdf), Gériatrie et Psychologie Neuropsychiatrie du Vieillissement, 15 (2),  205-13.
 
 Sperduti, M.\*, **Makowski, D.**\*, Arcangeli, M., Wantzen, P., Zalla, T., Lemaire, S., Dokic, J., Pelletier, J. & Piolino, P. (2017). [*The Distinctive Role of Executive Functions in Implicit Emotion Regulation*](https://dominiquemakowski.github.io/papers/sperduti2017.pdf). Acta Psychologica, 173, 13-20.
 
