--- a/about.Rmd
+++ b/about.Rmd
@@ -3,14 +3,6 @@ title: "About me"
 ---
 
 
-
----------------
-<p align="center">
-**NOTE: I'm currently looking for postdoc opportunities (I'm finishing my current contract in July 2018)**
-</p>
----------------
-
-
 <!-- <style> -->
 <!-- .image{float: left;} -->
 <!-- </style> -->
@@ -20,7 +12,7 @@ title: "About me"
 <!-- </div> -->
 
 
-I'm a neuropsychologist, psychotherapist & pizza addict, currently living in Paris, France. I'm fluent in French, Polish, English, Python, and I can pretend to speak Italian. My main figures of reference are Friston, Epictetus and Iron Man. You can find many other details in my CV below. You can also *illegally* download my papers from the [research](https://dominiquemakowski.github.io/research.html) page.
+I'm a neuropsychologist, psychotherapist & pizza addict, currently living in Paris, France. I'm fluent in French, Polish, English, Python, and somehow good in pretending to speak Italian. My main figures of reference are Friston, Epictetus and Batman. My interests are as broad as open-science, history of arts and transhumanism. You can find many other details in my CV below. I encourage you to *illegally* download my papers from the [research](https://dominiquemakowski.github.io/research.html) page.
 
 ---------
 
@@ -34,7 +26,7 @@ You can download my **full CV** with the following links:
 
 ---------
 
-```{r, out.width = "600px", echo = FALSE, eval = TRUE, fig.align='center', fig.cap="**A picture of myself showing some amazing results.**"}
+```{r, out.width = "600px", echo = FALSE, eval = TRUE, fig.align='center', fig.cap="**Me showing some ground-breaking results.**"}
 knitr::include_graphics("media/conf4.jpg")
 ```
 
